# tmai-ratatui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  events.rs  lib.rs  main.rs  types.rs
src/ui/: app.rs  mod.rs  session_list.rs
